# rinha-luajit-rs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-meta  Dockerfile-rinha  LICENSE  README.md  _build.sh  _run.sh  build.rs  luajit_patch.patch  meta.rinha  meta.rinha.json  out  source.rinha  source.rinha.json  temp.rinha  temp.rinha.json  test.json  test.lua  test.rinha.json
luajit/src/: Makefile  luaconf.h
src/: ast.rs  generate.rs  generate_meta.rs  lib.rs  luajit.rs  main.rs  meta-eval  meta-run
tests/: run_progs.rs
tests/test-jsons/: arithm.rinha  arithm.rinha.json  closure.rinha.json  concat.rinha  concat.rinha.json  cps.json  cps2.rinha  crazy1.rinha  crazy1.rinha.json  find.rinha  find.rinha.json  func_args_count1.json  func_args_count2.json  loop.json  tco.json  tuple.json
