[package]
name = "rinha-luajit-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
libc = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

overflow-checks = false
debug-assertions = false
strip = true
panic = 'abort'
